source/blender/asset_system/intern/asset_essentials_library.cc
@@ -16,6 +16,9 @@ StringRefNull essentials_directory_path()
 {
   static std::string path = []() {
     const char *datafiles_path = BKE_appdir_folder_id(BLENDER_DATAFILES, "assets");
+    if (datafiles_path == nullptr) {
+      return "";
+    }
     return datafiles_path;
   }();
   return path;
